# sber_learing

./: .gitignore  README.md  pyproject.toml
sber_learing/: 0._python.ipynb  08. Pandas.ipynb  09. Pandas.ipynb  main.ipynb
